@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-07-17T01:57:08Z",
-  "count_outdated" : 2243,
-  "uniques_outdated" : 485,
-  "count" : 2303,
-  "uniques" : 517,
+  "timestamp" : "2022-07-17T16:23:48Z",
+  "count_outdated" : 2245,
+  "uniques_outdated" : 487,
+  "count" : 2304,
+  "uniques" : 518,
   "clones" : [
-    {
-      "timestamp": "2022-07-03T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 2 ]
-    },
     {
       "timestamp": "2022-07-04T00:00:00Z",
       "count": 3,
