@@ -1,12 +1,7 @@
 {
-  "count": 60,
+  "count": 59,
   "uniques": 16,
   "clones": [
-    {
-      "timestamp": "2022-07-03T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-07-04T00:00:00Z",
       "count": 3,
